--- a/1.Securing-React-Apps-with-AuthO/package.json
+++ b/1.Securing-React-Apps-with-AuthO/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^5.3.3",
+    "express-jwt-authz": "^2.3.1",
     "jwks-rsa": "^1.8.0",
     "npm-run-all": "^4.1.5",
     "react": "^16.13.1",
