--- a/1.Securing-React-Apps-with-AuthO/package.json
+++ b/1.Securing-React-Apps-with-AuthO/package.json
@@ -13,6 +13,7 @@
     "express-jwt-authz": "^2.3.1",
     "jwks-rsa": "^1.8.0",
     "npm-run-all": "^4.1.5",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
