--- a/2.Building-Applications-with-React-and-Flux/package.json
+++ b/2.Building-Applications-with-React-and-Flux/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.4.1",
     "flux": "^3.1.3",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-toastify": "^5.5.0"
   },
   "scripts": {
     "start": "run-p start:dev start:api",
@@ -35,7 +37,7 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "^5.2.0",
+    "cross-env": "^5.2.1",
     "json-server": "^0.15.0",
     "npm-run-all": "^4.1.5"
   }
