--- a/3.Building-Applications-with-React-and-Redux/package.json
+++ b/3.Building-Applications-with-React-and-Redux/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "eslint-loader": "^4.0.0",
     "immer": "^6.0.3",
     "npm-run-all": "^4.1.5",
     "prop-types": "^15.7.2",
@@ -20,6 +21,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "sass": "^1.26.3",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
   },
