--- a/3.Building-Applications-with-React-and-Redux/package.json
+++ b/3.Building-Applications-with-React-and-Redux/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.4.1",
     "eslint-loader": "^4.0.0",
     "immer": "^6.0.3",
+    "json-server": "^0.16.1",
     "npm-run-all": "^4.1.5",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -26,7 +27,10 @@
     "webpack-cli": "^3.3.11"
   },
   "scripts": {
-    "start": "webpack-dev-server --config webpack.config.dev.js --port 3000",
+    "start":"run-p start:dev start:api",
+    "start:dev": "webpack-dev-server --config webpack.config.dev.js --port 3000",
+    "prestart:api": "node tools/createMockDb.js",
+    "start:api": "node tools/apiServer.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
